[package]
name = "auth"
version = "0.1.0"
authors = ["lome <1209518758@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-auth = { path = "../.." }
actix-web = "2.0"
actix-identity = "0.2.0"
actix-rt = "1.0"
chrono = "*"